--- a/src/pages/identification-client/identification-client.html
+++ b/src/pages/identification-client/identification-client.html
@@ -1,27 +1,15 @@
-<!--
-  Generated template for the IdentificationClientPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-
-</ion-header>
-
-
 <ion-content padding>
 
-  <ion-card >
+  <ion-card class="ion-card">
 
-  <ion-grid class="ion-grid" >
-    <ion-row>
-      <ion-title text-center>CLIENT</ion-title>
+    <ion-grid class="ion-grid" >
+      <ion-row>
+        <ion-title text-center>CLIENT</ion-title>
 
-    </ion-row>
+      </ion-row>
 
-    <ion-row class="ion-row" justify-content-center align-items-center>
-      <ion-col col-md-6 col-xs-12 >
+      <ion-row class="ion-row" justify-content-center align-items-center>
+        <ion-col col-md-6 col-xs-12 >
 
           <div class="form-customer">
             <ion-card-content >
@@ -51,20 +39,18 @@
             </ion-card-content>
           </div>
 
-      </ion-col >
-      <ion-col text-center col-md-6 col-xs-12>
+        </ion-col >
+        <ion-col text-center col-md-6 col-xs-12>
 
-              <ion-card text-center class="ion-card" (click)="createCustomer()">
-                <ion-card-header text-center class="add-customer">
-                  NOUVEAU CLIENT
-                </ion-card-header>
-                <ion-icon  class="add-customer-icon" name="person-add"></ion-icon>
-              </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+          <ion-card text-center class="ion-card-new-customer" (click)="createCustomer()">
+            <ion-card-header text-center class="add-customer">
+              NOUVEAU CLIENT
+            </ion-card-header>
+            <ion-icon  class="add-customer-icon" name="person-add"></ion-icon>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-card>
-
-
 
 </ion-content>
