--- a/src/pages/nouveau-client/nouveau-client.html
+++ b/src/pages/nouveau-client/nouveau-client.html
@@ -34,35 +34,25 @@
 
           <ion-row class="ion-row" >
             <ion-col>
-              <ion-list>
                 <ion-item>
                   <ion-label floating>Prénom</ion-label>
                   <ion-input name="name" [(ngModel)]="name" type="text"></ion-input>
                 </ion-item>
-              </ion-list>
-
             </ion-col >
             <ion-col>
-              <ion-list>
                 <ion-item>
                   <ion-label floating>Nom</ion-label>
                   <ion-input name="surname"[(ngModel)]="surname" type="text"></ion-input>
                 </ion-item>
-              </ion-list>
-
             </ion-col >
           </ion-row>
 
           <ion-row class="ion-row" >
             <ion-col>
-              <ion-list>
-
               <ion-item>
                 <ion-label floating>Adresse</ion-label>
                 <ion-input name="address" [(ngModel)]="email" type="text"></ion-input>
               </ion-item>
-              </ion-list>
-
             </ion-col >
           </ion-row>
 
@@ -70,67 +60,49 @@
 
           <ion-row class="ion-row" >
             <ion-col>
-              <ion-list>
-
               <ion-item>
                 <ion-label floating>Code Postal</ion-label>
                 <ion-input name="zipcode" [(ngModel)]="zipcode" type="text"></ion-input>
               </ion-item>
-              </ion-list>
-
             </ion-col >
             <ion-col>
-              <ion-list>
               <ion-item>
                 <ion-label floating>Ville</ion-label>
                 <ion-input name="city"[(ngModel)]="city" type="text"></ion-input>
               </ion-item>
-              </ion-list>
-
             </ion-col >
           </ion-row>
 
           <ion-row class="ion-row" >
             <ion-col>
-              <ion-list>
-
               <ion-item>
                 <ion-label floating>Numéro de téléphone</ion-label>
                 <ion-input name="phone" [(ngModel)]="phone" type="text"></ion-input>
               </ion-item>
-              </ion-list>
-
             </ion-col >
             <ion-col>
-              <ion-list>
               <ion-item>
                 <ion-label floating>Date de naissance</ion-label>
                 <ion-input name="birthdate"[(ngModel)]="birthdate" type="text"></ion-input>
               </ion-item>
-              </ion-list>
             </ion-col >
           </ion-row>
 
           <ion-row class="ion-row" >
             <ion-col>
-              <ion-list>
               <ion-item>
                 <ion-label floating>Email</ion-label>
                 <ion-input name="email" [(ngModel)]="email" type="text"></ion-input>
               </ion-item>
-              </ion-list>
             </ion-col >
-
           </ion-row>
           <ion-row class="ion-row" >
 
             <ion-col col-6>
             </ion-col >
-
             <ion-col col-6>
               <div padding class="button">
-
-                <button class="green-button" ion-button color="green-madera" (click)="login()">VALIDER</button>
+                <button class="green-button" ion-button color="green-madera" (click)="validate()">VALIDER</button>
               </div>
             </ion-col >
 
