identification + nouveau-clien

--- a/src/pages/identification-projet/identification-projet.html
+++ b/src/pages/identification-projet/identification-projet.html
@@ -4,26 +4,26 @@
 
     <ion-grid class="ion-grid" >
       <ion-row>
-        <ion-title text-center>CLIENT</ion-title>
+        <ion-title text-center>PROJET</ion-title>
 
       </ion-row>
 
       <ion-row class="ion-row" justify-content-center align-items-center>
         <ion-col col-md-6 col-xs-12>
-          <div class="text-project" text-left>Vos Projets</div>
+          <div class="text-project" text-left></div>
 
           <ion-card text-center class="ion-card-project">
             <ion-card-header text-center class="add-customer">
-              AUCUN PROJET
+              Vos Projets
             </ion-card-header>
             <ion-card-content>
-
+              AUCUN PROJET
             </ion-card-content>
           </ion-card>
         </ion-col>
         <ion-col text-center col-md-6 col-xs-12>
 
-          <ion-card text-center class="ion-card-new-customer" (click)="createCustomer()">
+          <ion-card text-center class="ion-card-new-project" (click)="createCustomer()">
             <ion-card-header text-center class="add-customer">
               NOUVEAU PROJET
             </ion-card-header>
