--- a/src/pages/identification-client/identification-client.html
+++ b/src/pages/identification-client/identification-client.html
@@ -41,7 +41,7 @@
         </ion-col >
         <ion-col text-center col-md-6 col-xs-12>
 
-          <ion-card text-center class="ion-card-new-customer" (click)="createCustomer()">
+          <ion-card text-center class="ion-card-new-customer" (click)="presentAddCustomerModal()">
             <ion-card-header text-center class="add-customer">
               NOUVEAU CLIENT
             </ion-card-header>
