--- a/src/pages/identification-projet/identification-projet.html
+++ b/src/pages/identification-projet/identification-projet.html
@@ -5,7 +5,9 @@
     <ion-grid class="ion-grid" >
       <ion-row>
         <ion-title text-center>PROJET</ion-title>
-
+      </ion-row>
+      <ion-row>
+        <ion-title class="customer-name"text-center>Kévin Buzit</ion-title>
       </ion-row>
 
       <ion-row class="ion-row" justify-content-center align-items-center>
@@ -23,7 +25,7 @@
         </ion-col>
         <ion-col text-center col-md-6 col-xs-12>
 
-          <ion-card text-center class="ion-card-new-project" (click)="createCustomer()">
+          <ion-card text-center class="ion-card-new-project" (click)="newProject()">
             <ion-card-header text-center class="add-customer">
               NOUVEAU PROJET
             </ion-card-header>
