--- a/src/pages/identification-client/identification-client.html
+++ b/src/pages/identification-client/identification-client.html
@@ -23,7 +23,7 @@
                   </ion-item>
 
                   <ion-item>
-                    <ion-label floating>Mot de passe</ion-label>
+                    <ion-label floating>Prénom</ion-label>
                     <ion-input name="name" required [(ngModel)]="client.prenomClient" type="text"></ion-input>
                   </ion-item>
 
