--- a/src/pages/identification-projet/identification-projet.html
+++ b/src/pages/identification-projet/identification-projet.html
@@ -20,7 +20,7 @@
             </ion-card-header>
             <ion-card-content>
               <div *ngIf="haveProjet">
-                <ion-card *ngFor="let projet of client.projets"  class="ion-card-project" (click)="detailsDevis(projet)">
+                <ion-card *ngFor="let projet of client.projets; let i = index"  class="ion-card-project" (click)="detailsDevis(projet,i)">
                   <ion-card-content  class="add-customer" >
 
                     <div *ngIf="projet.etatDevis=== 1">
