modif client projet

--- a/src/pages/identification-client/identification-client.html
+++ b/src/pages/identification-client/identification-client.html
@@ -4,6 +4,8 @@
 
     <ion-grid class="ion-grid" >
       <ion-row>
+        <ion-icon name="arrow-back"></ion-icon>
+
         <ion-title text-center>CLIENT</ion-title>
       </ion-row>
 
