LAST COMMIT OF THIS NIGHT <3

--- a/src/pages/identification-client/identification-client.html
+++ b/src/pages/identification-client/identification-client.html
@@ -4,7 +4,7 @@
 
     <ion-grid class="ion-grid" >
       <ion-row>
-        <ion-icon name="arrow-back"></ion-icon>
+        <ion-icon name="arrow-back"  (click)="pop()"></ion-icon>
 
         <ion-title text-center>CLIENT</ion-title>
       </ion-row>
