--- a/src/pages/identification-projet/identification-projet.html
+++ b/src/pages/identification-projet/identification-projet.html
@@ -4,6 +4,8 @@
 
     <ion-grid class="ion-grid" >
       <ion-row>
+        <ion-icon name="arrow-back"  (click)="pop()"></ion-icon>
+
         <ion-title text-center>PROJET</ion-title>
       </ion-row>
       <ion-row>
