--- a/src/pages/devis/devis.html
+++ b/src/pages/devis/devis.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar text-center>
+  <ion-navbar text-center hideBackButton="true">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -44,9 +44,9 @@
         <ion-row>
           <ion-col col-12 text-center>
             <strong>TOTAL HT : 110 000€</strong>
-            <p>TVA COM {{projet.margeCommercialeProjet}}% : 4950€</p>
-            <p>TVA ENT {{projet.margeEntrepriseProjet}}% : 11000€</p>
-            <strong>TOTAL TTC : 125 950€</strong>
+            <p>TVA COM {{projet.margeCommercialeProjet}}% : 2200€</p>
+            <p>TVA ENT {{projet.margeEntrepriseProjet}}% : 5500€</p>
+            <strong>TOTAL TTC : 117 700€</strong>
             <br>
           </ion-col>
         </ion-row>
