--- a/src/pages/authentication/authentication.html
+++ b/src/pages/authentication/authentication.html
@@ -8,7 +8,7 @@
           <ion-card class="ion-card" >
             <ion-list>
               <ion-card-header>
-                <img  src="../../assets/imgs/logo.svg" class="img-logo">
+                <img  src="./assets/imgs/logo.svg" class="img-logo">
 
               </ion-card-header>
                 <form >
