--- a/src/pages/conception-devis/conception-devis.html
+++ b/src/pages/conception-devis/conception-devis.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <img src="../../assets/imgs/logo.svg" class="img-logo" alt="Madera"/>
+    <img src="./assets/imgs/logo.svg" class="img-logo" alt="Madera"/>
     <ion-buttons end>
       <button ion-button icon-only class="contact-icon" (click)="presentPopover($event)">
         <ion-icon name="contact"></ion-icon>
