--- a/src/pages/identification-projet/identification-projet.html
+++ b/src/pages/identification-projet/identification-projet.html
@@ -9,7 +9,7 @@
         <ion-title text-center>PROJET</ion-title>
       </ion-row>
       <ion-row>
-        <ion-title class="customer-name"text-center >{{client.nomClient}} {{client.prenomClient}}</ion-title>
+        <ion-title class="customer-name" text-center >{{client.nomClient}} {{client.prenomClient}}</ion-title>
       </ion-row>
 
       <ion-row class="ion-row" justify-content-center align-items-center>
@@ -25,45 +25,30 @@
                 <ion-card *ngFor="let projet of client.projets; let i = index"  class="ion-card-project" (click)="detailsDevis(projet,i)">
                   <ion-card-content  class="add-customer" >
 
-                    <div *ngIf="projet.etatDevis=== 1">
-                      <div class="nom-projet-card">{{projet.nomProjet}}
-                        <ion-icon  name="create" class="edit-icon" >
-                        </ion-icon>
-                      </div>
-                    </div>
-                    <div *ngIf="projet.etatDevis=== 2">
-                        <div class="nom-projet-card">{{projet.nomProjet}}
-                          <ion-icon  name="checkmark" class="edit-icon" >
-                          </ion-icon>
-                        </div>
-                    </div>
-                    <div *ngIf="projet.etatDevis=== 3">
-                      <div class="nom-projet-card">{{projet.nomProjet}}
-                        <ion-icon  name="time" class="edit-icon" >
-                        </ion-icon>
-                      </div>
-                    </div>
-                    <div *ngIf="projet.etatDevis=== 4">
-                      <div class="nom-projet-card">{{projet.nomProjet}}
-                        <ion-icon  name="close" class="edit-icon" >
-                        </ion-icon>
-                      </div>
-                    </div>  <div *ngIf="projet.etatDevis=== 5">
-                    <div class="nom-projet-card">{{projet.nomProjet}}
-                      <ion-icon  name="basket" class="edit-icon" >
+                      {{projet.nomProjet}}
+
+                      <ion-icon *ngIf="projet.etatDevis=== 1" name="create" class="text-color-green-madera" float-right>
                       </ion-icon>
-                    </div>
-                  </div>  <div *ngIf="projet.etatDevis=== 6">
-                    <div class="nom-projet-card">{{projet.nomProjet}}
-                      <ion-icon  name="filing" class="edit-icon" >
+
+                      <ion-icon *ngIf="projet.etatDevis=== 2" name="checkmark" class="text-color-green-madera" float-right>
                       </ion-icon>
-                    </div>
-                  </div>
+
+                      <ion-icon *ngIf="projet.etatDevis=== 3" name="time" class="text-color-green-madera" float-right>
+                      </ion-icon>
+
+                      <ion-icon *ngIf="projet.etatDevis=== 4" name="close" class="text-color-green-madera" float-right>
+                      </ion-icon>
+
+                      <ion-icon *ngIf="projet.etatDevis=== 5" name="basket" class="text-color-green-madera" float-right>
+                      </ion-icon>
+
+                      <ion-icon *ngIf="projet.etatDevis=== 6" name="filing" class="text-color-green-madera" float-right>
+                      </ion-icon>
 
                   </ion-card-content>
                 </ion-card>
               </div>
-              <div *ngIf="!haveProjet" class="noProjets">
+              <div *ngIf="!haveProjet" text-center>
                 AUCUN PROJET
               </div>
             </ion-card-content>
